--- a/src/App.css
+++ b/src/App.css
@@ -36,4 +36,15 @@
 
 
 
+@media only screen and (max-width: 600px) {
+  .form h1 {
+    font-size: 30px;
+  }
+  .spell h1 {
+    font-size: 20px;
+  }
 
+  .spell {
+    font-size: 8px;
+  }
+}
